# platformgo

./: go.mod
.github/workflows/: build.yml
platform/: BUILD.bazel  analytics.go  client.go  orgs.go  packages.go  user.go
