load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "platform",
    srcs = [
        "analytics.go",
        "client.go",
        "orgs.go",
        "user.go",
    ],
    importpath = "go.siberianmh.com/third_party/github/platformgo/platform",
    visibility = ["//visibility:public"],
)
